Write basic HTML intro page

--- a/index.html
+++ b/index.html
@@ -1,9 +1,139 @@
-<html>
-  <head>
-    <title>Chromatogeno.us</title>
-  </head>
-  <body>
-    <h1>Success!</h1>
-  </body>
-</html>
+<!DOCTYPE HTML>
 
+<html lang="en">
+
+	<head>
+		<meta charset="utf-8">
+		<meta name="Index page" content="Intro page for Chromatogenous website">
+		<title>Chromatogenous</title>
+	</head>
+
+	<body>
+
+		<h1>About</h1>
+		<p>Hello! My name is Allan MacLeod, and this is my learning and project
+			website. Over the last two years, I have made a hobby out of learning
+			computer science. I have been dabbling to get an understanding of
+			the basics in a wide variety of CS subject areas, identify what I
+			enjoy doing, and determine what I might want to eventually work on
+			professionally. This web page is a stepping stone along that path,
+			a place to experiment with the things I am studying, and a way to
+			showcase what I have learned.
+			<br>
+			<br>I am interested in web development, but I have been put off by the
+			pace, length of time commitment, and linear nature the course offerings
+			I have seen. In creating even a simple website, skills spanning a
+			dozen different disciplines are necessary. It’s not practical to say,
+			“oh, I’ll learn that next semester and just keep my project on hold
+			for now.” It’s difficult to know whether it’s worth investing time
+			in learning a skill before you actively need it, and difficult to
+			figure out how deeply you need to know a topic once you’ve decided
+			it’s useful, e.g. how much knowledge of managing DNS is necessary
+			when all you want to do is run a small personal website?
+			<br>
+			<br>There is also a chicken-and-egg problem in technical job fields: I
+			need experience so that I can get a job so that I can get experience,
+			but how can I gain experience, for example, in building back-end database
+			applications if I don’t have a server or a database to work with?
+			I learn most effectively by crawling, walking, running with a large
+			dose of exploration, so I have been learning and building everything
+			from scratch. It’s a larger up-front time commitment, but I find that
+			the network of ideas I build learning in a haphazard way is stronger
+			than those I build in a formal learning environment.
+			<br>
+			<br>Because of the sheer breadth and width of skills necessary to be an
+			effective developer, and because my learning path has been so scattered,
+			I created this project website as a way of focusing my efforts, taking
+			small iterative steps forward, and creating something practical to
+			showcase. There are many days when the size of what I don’t know is
+			intimidating, and staying motivated is a challenge. Small victories
+			are critical, and cataloging accomplishments is a helpful way of showing
+			progress concretely.
+			<br>
+		</p>
+
+		<h2>Topic areas have I studied so far</h2>
+		<p>In rough order:
+			<ul>
+				<li>Java</li>
+				<li>XML</li>
+				<li>Android application development</li>
+				<li>Design topics, including the Adobe Creative Suite</li>
+				<li>HTML and CSS basics</li>
+				<li>C</li>
+				<li>Basics of programming</li>
+				<li>Database theory</li>
+				<li>Networking theory</li>
+				<li>Data structures</li>
+				<li>Overview of web development, front end vs. back end</li>
+				<li>Linux topics including command line, bash scripting, vi, and kernel
+					fundamentals
+				</li>
+				<li>Git and GitHub</li>
+				<li>Using Raspberry Pi</li>
+				<li>Working with SSH</li>
+				<li>Apache server administration</li>
+				<li>IP addressing and managing DNS</li>
+			</ul>
+			...and a pastiche of other skills gained through Google searches, Stack
+			Overflow queries, forum threads, man pages, and trial and error
+		</p>
+
+		<h2>Projects so far</h2>
+		<p>My two major projects so far are a watchface for the Pebble smartwatch,
+			called Eight-frame, and this website, Chromatogenous.</p>
+
+		<h3>Eight-frame, a watchface for Pebble smartwatches</h3>
+		<p>I designed Eight-frame to show a large variety of information directly
+			on the watchface, saving the need to go through menus. The main program
+			was written in C, with a JavaScript element that fetches the weather
+			as a JSON object, manipulates it, and sends it back to the main program
+			as a dictionary. Package management is handled through Node.js, and
+			the user menu is made with an npm package and a CSS file containing
+			instructions.
+			<br>
+			<br>Eight-frame was a way of practically applying the programming theory
+			I learned, and of creating a project that was personally useful. I
+			liked being able to see the wind speed in the morning before deciding
+			whether to ride my bike to work, something I would forget to do if
+			I had to click, swipe, and tap through a bunch of windows, apps, and
+			pages on my phone or computer.
+			<br>
+			<br> Technically, learning how to set up a development environment, getting
+			comfortable with the command line, and getting practical experience
+			with debugging were the most important skills I developed here. I
+			eventually moved away from using Pebble’s cloud-based editor and synced
+			my project with GitHub using the cli tools and git.
+			<br>
+			<br> In addition to improving the app’s code, I would like to eventually
+			write and host the watchface’s configuration page on Chromatogenous
+			as a practical exercise in JavaScript and related technologies.
+			<br>
+		</p>
+
+		<h3>Chromatogenous</h3>
+		<p>The name of this website, chromatogenous, is an adjective that means
+			‘producing color.’ In this case, I want to add some metaphoric color
+			to the literally black-and-white text of a resume, and show off my
+			level of competence as I develop it. The website is physically located
+			on a Raspberry Pi server. The server is currently running Raspbian
+			OS and Apache. As I got used to the command line and SSH, I weaned
+			myself off the GUI. In the process of getting the server up, I learned
+			a bit about DNS, IP addressing, the basics of running Apache, and
+			I got a basic page to display.
+			<br>
+			<br>When I get to a point in my understanding where the differences between
+			distributions begin to matter, I plan to learn Ubuntu and Red Hat
+			distributions, too. In the longer term, I want to learn about cloud-based
+			platforms like Amazon Web Services and Salesforce. For the near future,
+			I will develop this page as a functional exercise in structuring HTML
+			documents, using CSS, and writing JavaScript components.</p>
+
+		<h2>Contact</h2>
+		<p>LinkedIn:
+			<br>GitHub: <a href="https://github.com/aemacleod">aemacleod</a>
+		</p>
+
+	</body>
+
+</html>
