Add LinkedIn link

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 	<head>
 		<meta charset="utf-8">
-		<meta name="Index page" content="Intro page for Chromatogenous website">
+		<meta name="About page" content="About page for Chromatogenous website">
 		<title>Chromatogenous</title>
 	</head>
 
@@ -130,8 +130,8 @@
 			documents, using CSS, and writing JavaScript components.</p>
 
 		<h2>Contact</h2>
-		<p>LinkedIn:
-			<br>GitHub: <a href="https://github.com/aemacleod">aemacleod</a>
+		<p><a href="https://www.linkedin.com/in/aemacleod/">LinkedIn</a>
+			<br><a href="https://github.com/aemacleod">GitHub</a>
 		</p>
 
 	</body>
